--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ stylus:
   path: ./styles/
 defaults:
   - scope:
-      path: "*.pug"
+      path: "*.html"
     values:
-      layout: "default"
+      layout: "default.html"
